# src/api/RoleRouter.ts
@@ -39,6 +39,94 @@ const router: Router = Router();
 router.post('', RoleFacade.save);
 
 /**
+ * GET method route
+ * @example http://localhost:PORT/roles
+ * @swagger
+ * /roles/:
+ *  get:
+ *    description: Get all Roles
+ *    tags: ["Roles"]
+ *    responses:
+ *      200:
+ *        description: All Roles
+ *        content:
+ *          appication/json:
+ *            schema:
+ *              $ref: '#/components/schemas/RoleTo'
+ *      400:
+ *        description: Error bad parameters
+ *        content:
+ *          application/json:
+ *            schema:
+ *              $ref: '#/components/schemas/ErrorTo'
+ */
+router.get('', RoleFacade.findAll);
+
+/**
+ * PUT method route
+ * @example http://localhost:PORT/roles
+ * @swagger
+ * /roles:
+ *  put:
+ *    description: modify Roles
+ *    tags: ["Roles"]
+ *    requestBody:
+ *      description: object role
+ *      required: true
+ *      content:
+ *        application/json:
+ *          schema:
+ *            $ref: '#/components/schemas/RoleTo'
+ *    responses:
+ *      200:
+ *        description: All Roles
+ *        content:
+ *          appication/json:
+ *            schema:
+ *              $ref: '#/components/schemas/RoleTo'
+ *      400:
+ *        description: Error bad parameters
+ *        content:
+ *          application/json:
+ *            schema:
+ *              $ref: '#/components/schemas/ErrorTo'
+ */
+router.put('', RoleFacade.puting);
+
+
+/**
+ * DELETE method route
+ * @example http://localhost:PORT/roles
+ * @swagger
+ * /roles/{id}/id:
+ *  delete:
+ *    description: create Roles
+ *    tags: ["Roles"]
+ *    parameters : [
+ *      {
+ *         name: 'id',
+ *         in: 'path',
+ *         schema: {
+ *           type: 'number',
+ *           example: 1
+ *         },
+ *         required: true
+ *      }
+ *    ]
+ *    responses:
+ *      200:
+ *        description: All Roles
+ *      400:
+ *        description: Error bad parameters
+ *        content:
+ *          application/json:
+ *            schema:
+ *              $ref: '#/components/schemas/ErrorTo'
+ */
+router.delete('/:id/id', RoleFacade.publish);
+
+
+/**
  * @export {express.Router}
  */
 export default router;
